--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">complex-build</string>
     <string name="string_lib_lb_use_define_in_app">string_lib_lb_use_define_in_app</string>
+
+    <string name="repeat_string">repeat_in_app</string>
 </resources>
